# ShiftIQ

./: ARCHITECTURE.md  FRE_Engineering_Review.md  FRE_MLP_Product_Strategy.md  GITHUB_PROFILE_README.md  INTERNSHIP_POSITIONING.md  README.md  api.py  app.py  charts.py  config.py  database.py  date_parser.py  financial_state.py  launch.command  main.py  model.py  optimizer.py  page_analytics.py  page_goals.py  page_home.py  page_more.py  page_schedule.py  page_settings.py  pdf_report.py  pyproject.toml  render.yaml  schedule_core.py  schedule_event.py  shift_analytics.py  shift_engine.py  shift_parser.py  shift_planner_ui.py  test_fre.py  time_engine.py  utils.py  week_engine.py  widgets.py
static/: index.html
