[project]
name = "shiftiq"
version = "1.1.0"
description = "A decision intelligence system that models how time allocation drives income, risk, and financial stability for variable-income workers."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Keziah Aba Ghartey" },
]
keywords = [
    "personal-finance",
    "simulation",
    "monte-carlo",
    "scheduling",
    "gig-economy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "matplotlib>=3.9.0",
    "reportlab>=4.0.0",
    "schedule>=1.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
api = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0", "pydantic>=2.6.0"]

[project.urls]
Repository = "https://github.com/gharteykeziah-hub/shiftiq"

[tool.pytest.ini_options]
testpaths = ["test_fre.py"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
